# lora_zephyr_mesh

./: CMakeLists.txt  prj.conf
include/: lora_mesh.h
src/: lora_mesh.c  main.c
